force-app/main/default/objects/Retry_Log_Event__e/Retry_Log_Event__e.object-meta.xml
<CustomObject>
    <description>Publish data to external partners.</description>
    <label>Retry Log Event</label>
    <pluralLabel>Retry Log Event</pluralLabel>
</CustomObject>