force-app/main/default/objects/Retry_Log_Event__e/fields/Integration_Flow__c.field-meta.xml
<CustomField>
    <fullName>Integration_Flow__c</fullName>
    <label>Integration Flow</label>
    <length>10</length>
    <type>Text</type>
</CustomField>