force-app/main/default/objects/Retry_Log_Event__e/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <label>Method Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>