force-app/main/default/objects/Retry_Log_Event__e/fields/Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>Request_Payload__c</fullName>
    <label>Request Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>