force-app/main/default/objects/Retry_Log_Event__e/fields/Response_Payload__c.field-meta.xml
<CustomField>
    <fullName>Response_Payload__c</fullName>
    <label>Response Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>